路由搭载完毕

--- a/myapp/src/App.css
+++ b/myapp/src/App.css
@@ -39,3 +39,19 @@
   line-height: 0.72rem;
   padding-left: 0.2rem;
 }
+#tab-bar.demo {
+  display: flex;
+  flex-direction: column;
+}
+#tab-bar .demoName {
+  height: 0.8rem;
+}
+#tab-bar .demo-preview-item,
+#tab-bar .demo-preview-item .am-tab-bar {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+#tab-bar .demo-preview-item .am-tab-bar {
+  background-color: white;
+}
